  * Bug fixes
    * Fix for those not running IBus, where the IBus workaround caused
      broken keys in other keymaps set with non-IBus tools (Steve
      Boddy, LP#1494606)
    * Fix custom commands to use the standard gerr function instead
      of the broken local one (Steve Boddy)
    * Workaround for intltool not handling Python files without an
      extension (Steve Boddy)

terminator 0.98:
  * Features
    * Layout launcher with option or shortcut (Steve Boddy)
    * An all-new manual! Default to F1 key (Steve Boddy)
    * An initial separate port to gtk3 is available for the brave, which
      is having all trunk changes applied to it while the issues get
      shaken out (Egmont Koblinger & Steve Boddy)
  * Enhancements
    * Layout launcher reloads config when opened to be sure it has the
      latest layouts (Steve Boddy)
    * Reload the config before we write to it or we could overwrite
      something from another instance (Steve Boddy)
    * When saving, a layout now remembers:
      * maximised and fullscreen status (Steve Boddy)
      * window titles (Steve Boddy, LP#1192960)
      * which tab was active (Steve Boddy)
      * which terminal was active (Steve Boddy, LP#858268)
      * working directory for each terminal (MoMaT, LP#1157422) plus
        additional GUI code (Steve Boddy)
    * Add vertical scrollbar to the layout launcher and make mouse
      wheel scrolling work (Steve Boddy)
    * Add vertical scrollbars to the Profiles and Layouts tabs in
      Preferences (Steve Boddy, LP#1396843)
    * Add options for non-homogenous tabs and scroll arrows (Grizzly
      Smit)
    * Add shortcuts for scrolling up/down by line/half-page/page
      (nanikata, LP#332267)
    * Improve consistency of Custom Commands menu (David Caro, LP#684340)
    * New distinct icons for non terminal windows (Steve Boddy)
    * Active terminal per tab is remembered (Steve Boddy, LP#315956)
    * Add shortcuts/code to toggle All/Tab grouping (Steve Boddy,